[package]
name = "fly_rd-132211"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "1nject"
path = "src/dll_injector.rs"

[dependencies]
argh = "0.1.14"
dear-imgui-glow = "0.8.0"
dear-imgui-rs = "0.8.0"
glow = "0.16.0"
minhook = "0.9.0"
windows = { version = "0.62.2", features = [
    "Win32_System_Diagnostics_Debug", 
    "Win32_System",
    "Win32_Foundation",
    "Wdk_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_Security_Authorization",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_Memory",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_OpenGL",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Console",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging"
]}
